# jquants-derivatives

./: .gitignore  README.md  pyproject.toml
data/: sq.csv
jquants_derivatives/: __init__.py  __main__.py  bsm.py  client.py  database.py  derivatievs.py  models.py
tests/: conftest.py  jquantsapi.db  test_bsm.py  test_sq.py
